force-app/main/default/objects/FTMSBill__c/FTMSBill__c.object-meta.xml
<CustomObject>
    <label>F/TMS Bill</label>
    <nameField>
        <displayFormat>FTB-{000000}</displayFormat>
        <label>F/TMS Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>