force-app/main/default/objects/FTMSBill__c/fields/AdvancedShipment__c.field-meta.xml
<CustomField>
    <fullName>AdvancedShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advanced Shipment</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>