force-app/main/default/objects/FTMSBill__c/fields/AdvancePaymentonbehalfofCustomer__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentonbehalfofCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment on-behalf-of Customer</label>
    <type>Checkbox</type>
</CustomField>