force-app/main/default/objects/FTMSBill__c/fields/AdvancePaymentonbehalfofOurCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentonbehalfofOurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment on-behalf-of Our Company</label>
    <type>Checkbox</type>
</CustomField>