force-app/main/default/objects/FTMSBill__c/fields/AgentCreditDate__c.field-meta.xml
<CustomField>
    <fullName>AgentCreditDate__c</fullName>
    <label>Agent Credit Date</label>
    <type>Date</type>
</CustomField>