force-app/main/default/objects/FTMSBill__c/fields/AmountBuyingInclTaxAdjust_Local__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxAdjust_Local__c</fullName>
    <label>Amount Buying Incl Tax-Adjust(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>