force-app/main/default/objects/FTMSBill__c/fields/AmountBuyingInclTaxAdjustFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxAdjustFCY__c</fullName>
    <label>Amount Buying Incl Tax-Adjust(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>