force-app/main/default/objects/FTMSBill__c/fields/AmountBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxFCY__c</fullName>
    <formula>TotalAmountofBuyingFCY__c + AmountTaxBuyingFCY__c + AmountBuyingInclTaxAdjustFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>