force-app/main/default/objects/FTMSBill__c/fields/AmountBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxLocal__c</fullName>
    <formula>TotalAmountofBuyingLocal__c + AmountTaxBuyingLocal__c + AmountBuyingInclTaxAdjust_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>