force-app/main/default/objects/FTMSBill__c/fields/AmountPaidforCustomerFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidforCustomerFCY__c</fullName>
    <label>Amount Paid-Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>