force-app/main/default/objects/FTMSBill__c/fields/AmountPaidforCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidforCustomerLocal__c</fullName>
    <label>Amount Paid-Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>