force-app/main/default/objects/FTMSBill__c/fields/AmountReceivedfromCustomer__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedfromCustomer__c</fullName>
    <label>Amount Received from Customer (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>