force-app/main/default/objects/FTMSBill__c/fields/AmountReceivedfromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedfromCustomerLocal__c</fullName>
    <label>Amount Received from Customer(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>