force-app/main/default/objects/FTMSBill__c/fields/AmountSellingInclTaxAdjustFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxAdjustFCY__c</fullName>
    <label>Amount Selling Incl Tax-Adjust(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>