force-app/main/default/objects/FTMSBill__c/fields/AmountSellingInclTaxAdjustLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxAdjustLocal__c</fullName>
    <label>Amount Selling Incl Tax-Adjust(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>