force-app/main/default/objects/FTMSBill__c/fields/AmountSellingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxFCY__c</fullName>
    <formula>TotalAmountofSellingFCY__c + AmountTaxSellingFCY__c + AmountSellingInclTaxAdjustFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Selling Incl Tax (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>