force-app/main/default/objects/FTMSBill__c/fields/AmountSellingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxLocal__c</fullName>
    <formula>TotalAmountofSellingLocal__c + AmountTaxSellingLocal__c + AmountSellingInclTaxAdjustLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Selling Incl Tax (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>