force-app/main/default/objects/FTMSBill__c/fields/AmountTaxBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingFCY__c</fullName>
    <formula>if (TaxIncludedBuying__c= FALSE, ChargeQuantity__c *  UnitPriceofBuyingFCY__c * TaxRateBuying__c, (ChargeQuantity__c * UnitPriceofBuyingFCY__c * TaxRateBuying__c)/ (1+TaxRateBuying__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Buying (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>