force-app/main/default/objects/FTMSBill__c/fields/AmountTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingLocal__c</fullName>
    <formula>if (TaxIncludedBuying__c= FALSE, ChargeQuantity__c * UnitPriceofBuyingLocal__c * TaxRateBuying__c, (ChargeQuantity__c * UnitPriceofBuyingLocal__c * TaxRateBuying__c)/ (1+TaxRateBuying__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>