force-app/main/default/objects/FTMSBill__c/fields/AmountTaxSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingFCY__c</fullName>
    <formula>if ( TaxIncluded__c = FALSE, ChargeQuantity__c *  UnitPriceFCY__c *  TaxRateSelling__c , (ChargeQuantity__c * UnitPriceFCY__c * TaxRateSelling__c )/ (1+TaxRateSelling__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>