force-app/main/default/objects/FTMSBill__c/fields/AmountTaxSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingLocal__c</fullName>
    <formula>if ( TaxIncluded__c = FALSE, ChargeQuantity__c *  UnitPriceofSellingLocal__c *  TaxRateSelling__c , (ChargeQuantity__c * UnitPriceofSellingLocal__c * TaxRateSelling__c )/ (1+TaxRateSelling__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>