force-app/main/default/objects/FTMSBill__c/fields/ApplicantSelling__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSelling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant-Selling</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS Bills (Applicant-Selling)</relationshipLabel>
    <relationshipName>F_TMS_Bills2</relationshipName>
    <type>Lookup</type>
</CustomField>