force-app/main/default/objects/FTMSBill__c/fields/BankAccountforPayment__c.field-meta.xml
<CustomField>
    <fullName>BankAccountforPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Payment</label>
    <referenceTo>BankAcc__c</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>