force-app/main/default/objects/FTMSBill__c/fields/BankAccountforReceipt__c.field-meta.xml
<CustomField>
    <fullName>BankAccountforReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Receipt</label>
    <referenceTo>BankAcc__c</referenceTo>
    <relationshipLabel>F/TMS Bills (Bank Account for Receipt)</relationshipLabel>
    <relationshipName>F_TMS_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>