force-app/main/default/objects/FTMSBill__c/fields/BeneficiaryBuying__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryBuying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary-Buying</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS Bills (Benificiary-Buying)</relationshipLabel>
    <relationshipName>F_TMS_Bills3</relationshipName>
    <type>Lookup</type>
</CustomField>