force-app/main/default/objects/FTMSBill__c/fields/BillingDataUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>BillingDataUpdateDateTime__c</fullName>
    <label>Billing Data Update Date/Time</label>
    <type>DateTime</type>
</CustomField>