force-app/main/default/objects/FTMSBill__c/fields/BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintENG__c</fullName>
    <label>Bill Name at Print(ENG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>