force-app/main/default/objects/FTMSBill__c/fields/BillNameforInternal__c.field-meta.xml
<CustomField>
    <fullName>BillNameforInternal__c</fullName>
    <label>Bill Name for Internal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>