force-app/main/default/objects/FTMSBill__c/fields/BuyingBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingBankTransactionCode__c</fullName>
    <label>Buying Bank Transaction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>