force-app/main/default/objects/FTMSBill__c/fields/Cargostatusischanged__c.field-meta.xml
<CustomField>
    <fullName>Cargostatusischanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargo status is changed</label>
    <type>Checkbox</type>
</CustomField>