force-app/main/default/objects/FTMSBill__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC-Flexi</fullName>
            </value>
            <value>
                <fullName>45&apos;IMO</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>B/L</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Keg</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>RTON</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Skid</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>