force-app/main/default/objects/FTMSBill__c/fields/CollectionDueDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDueDate__c</fullName>
    <label>Collection Due Date</label>
    <type>Date</type>
</CustomField>