force-app/main/default/objects/FTMSBill__c/fields/CompanyCreditDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyCreditDate__c</fullName>
    <label>Date on Credit Note</label>
    <type>Date</type>
</CustomField>