force-app/main/default/objects/FTMSBill__c/fields/ConsolBill__c.field-meta.xml
<CustomField>
    <fullName>ConsolBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol Bill</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>F/TMS Bills (Consol Bill)</relationshipLabel>
    <relationshipName>F_TMS_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>