force-app/main/default/objects/FTMSBill__c/fields/ConsolShipmentBuying__c.field-meta.xml
<CustomField>
    <fullName>ConsolShipmentBuying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol Shipment Buying</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>