force-app/main/default/objects/FTMSBill__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <formula>IF(LEFT(RIGHT(InvNoonCreditfromCompany__c,11),2)=&quot;CN&quot;,RIGHT(InvNoonCreditfromCompany__c,3),&quot;000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Check</label>
    <type>Text</type>
</CustomField>