force-app/main/default/objects/FTMSBill__c/fields/CreditNofromAgent__c.field-meta.xml
<CustomField>
    <fullName>CreditNofromAgent__c</fullName>
    <inlineHelpText>Credit No on Credit form sent by Agent</inlineHelpText>
    <label>Credit No. from Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>