force-app/main/default/objects/FTMSBill__c/fields/CurrencyConversionforBuying__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionforBuying__c</fullName>
    <label>Currency Conversion for Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From FCY to Local Currency</fullName>
            </value>
            <value>
                <fullName>From Local Currency to FCY</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>