force-app/main/default/objects/FTMSBill__c/fields/Debit_check__c.field-meta.xml
<CustomField>
    <fullName>Debit_check__c</fullName>
    <formula>IF(LEFT(RIGHT(OutboundVATInvNo__c,11),2)=&quot;DN&quot;,RIGHT(OutboundVATInvNo__c,3),&quot;000&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit check</label>
    <type>Text</type>
</CustomField>