force-app/main/default/objects/FTMSBill__c/fields/DebitNo__c.field-meta.xml
<CustomField>
    <fullName>DebitNo__c</fullName>
    <label>Debit No - not use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>