force-app/main/default/objects/FTMSBill__c/fields/Dingiidiengiaiselling__c.field-meta.xml
<CustomField>
    <fullName>Dingiidiengiaiselling__c</fullName>
    <label>Diễn giải(dien_giai)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>