force-app/main/default/objects/FTMSBill__c/fields/ExchangeRequiredforBuying__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRequiredforBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchange Required for Buying</label>
    <type>Checkbox</type>
</CustomField>