force-app/main/default/objects/FTMSBill__c/fields/ExchangeRequiredforSelling__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRequiredforSelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchange Required for Selling</label>
    <type>Checkbox</type>
</CustomField>