force-app/main/default/objects/FTMSBill__c/fields/Forbid_Deleted_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Forbid_Deleted_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forbid Deleted checkbox</label>
    <type>Checkbox</type>
</CustomField>