force-app/main/default/objects/FTMSBill__c/fields/FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>FTMSSO__c</fullName>
    <label>F/TMS S/O</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>