force-app/main/default/objects/FTMSBill__c/fields/FxRateID__c.field-meta.xml
<CustomField>
    <fullName>FxRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID</label>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>