force-app/main/default/objects/FTMSBill__c/fields/H_n_tt_N_han_ttselling__c.field-meta.xml
<CustomField>
    <fullName>H_n_tt_N_han_ttselling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hạn tt:N(han_tt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>