force-app/main/default/objects/FTMSBill__c/fields/HnttNhantt__c.field-meta.xml
<CustomField>
    <fullName>HnttNhantt__c</fullName>
    <label>Hạn tt:N(han_tt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>