force-app/main/default/objects/FTMSBill__c/fields/InboundVATINVNo__c.field-meta.xml
<CustomField>
    <fullName>InboundVATINVNo__c</fullName>
    <inlineHelpText>Invoice No on Debit form received from Vendor/Agent</inlineHelpText>
    <label>Debit No. from Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>