force-app/main/default/objects/FTMSBill__c/fields/Invoice_To_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice To = Carrier</label>
    <type>Checkbox</type>
</CustomField>