force-app/main/default/objects/FTMSBill__c/fields/Invoice_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice To = Customer</label>
    <type>Checkbox</type>
</CustomField>