force-app/main/default/objects/FTMSBill__c/fields/InvoiceDestinationType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDestinationType__c</fullName>
    <label>Invoice Destination Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>