force-app/main/default/objects/FTMSBill__c/fields/InvoiceSBDisplayNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSBDisplayNo__c</fullName>
    <label>Invoice S/B Display No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>