force-app/main/default/objects/FTMSBill__c/fields/InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F/TMS Bills</relationshipLabel>
    <relationshipName>F_TMS_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>