force-app/main/default/objects/FTMSBill__c/fields/InvoicetoAgent__c.field-meta.xml
<CustomField>
    <fullName>InvoicetoAgent__c</fullName>
    <formula>IF(AND ((NOT(ISBLANK( InvoiceTo__c))), OR( InvoiceTo__r.Id  = FTMSSO__r.Agent__r.Id, InvoiceTo__r.Id  = FTMSSO__r.Agent2nd__r.Id)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice to = Agent</label>
    <type>Checkbox</type>
</CustomField>