force-app/main/default/objects/FTMSBill__c/fields/IssuedTaxInvBuying__c.field-meta.xml
<CustomField>
    <fullName>IssuedTaxInvBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issued Tax Inv - Buying</label>
    <type>Checkbox</type>
</CustomField>