force-app/main/default/objects/FTMSBill__c/fields/IssuedTaxInvSelling__c.field-meta.xml
<CustomField>
    <fullName>IssuedTaxInvSelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issued Tax Inv - Selling</label>
    <type>Checkbox</type>
</CustomField>