force-app/main/default/objects/FTMSBill__c/fields/LockBilling__c.field-meta.xml
<CustomField>
    <fullName>LockBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Billing</label>
    <type>Checkbox</type>
</CustomField>