force-app/main/default/objects/FTMSBill__c/fields/LockSellingafterissueVAT__c.field-meta.xml
<CustomField>
    <fullName>LockSellingafterissueVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Selling after issue VAT</label>
    <type>Checkbox</type>
</CustomField>