force-app/main/default/objects/FTMSBill__c/fields/M_bpht_ma_bpht_iselling__c.field-meta.xml
<CustomField>
    <fullName>M_bpht_ma_bpht_iselling__c</fullName>
    <label>Mã bpht(ma_bpht_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>