force-app/main/default/objects/FTMSBill__c/fields/M_d_n_ma_vv_ibuying__c.field-meta.xml
<CustomField>
    <fullName>M_d_n_ma_vv_ibuying__c</fullName>
    <label>Mã dự án(ma_vv_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>