force-app/main/default/objects/FTMSBill__c/fields/M_k_tt_ma_thckselling__c.field-meta.xml
<CustomField>
    <fullName>M_k_tt_ma_thckselling__c</fullName>
    <label>Mã đ/k tt(ma_thck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>