force-app/main/default/objects/FTMSBill__c/fields/M_kh_ch_ma_kh__c.field-meta.xml
<CustomField>
    <fullName>M_kh_ch_ma_kh__c</fullName>
    <label>Mã khách(ma_kh)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>