force-app/main/default/objects/FTMSBill__c/fields/M_n_t_ma_ntselling__c.field-meta.xml
<CustomField>
    <fullName>M_n_t_ma_ntselling__c</fullName>
    <label>Mã n.tệ(ma_nt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>