force-app/main/default/objects/FTMSBill__c/fields/M_ph_ma_phi_iselling__c.field-meta.xml
<CustomField>
    <fullName>M_ph_ma_phi_iselling__c</fullName>
    <label>Mã phí(ma_phi_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>