force-app/main/default/objects/FTMSBill__c/fields/M_t_su_t_ma_thue_ibuying__c.field-meta.xml
<CustomField>
    <fullName>M_t_su_t_ma_thue_ibuying__c</fullName>
    <label>Mã t.suất(ma_thue_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>