force-app/main/default/objects/FTMSBill__c/fields/M_td_1_ma_td_ibuying__c.field-meta.xml
<CustomField>
    <fullName>M_td_1_ma_td_ibuying__c</fullName>
    <label>Mã td 1(ma_td_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>