force-app/main/default/objects/FTMSBill__c/fields/M_td_2_ma_td2_ibuying__c.field-meta.xml
<CustomField>
    <fullName>M_td_2_ma_td2_ibuying__c</fullName>
    <label>Mã td 2(ma_td2_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>